Fix dots displaying problem on mobiles

--- a/src/sass/components/_panel-bar.scss
+++ b/src/sass/components/_panel-bar.scss
@@ -4,6 +4,9 @@
   .row > * {
     border-bottom: 4px solid #e2e2e2;
   }
+  .w-100 {
+    border: none;
+  }
 
   .heading {
     position: relative;
@@ -66,12 +69,19 @@
   }
 
   .dots {
+    @include media-breakpoint-down(md) {
+      margin: 0 auto;
+    }
+
     ul {
       margin: 0;
       padding: 0 0 0 1rem;
       list-style: none;
       background-color: #ffffff;
       transform: translateY(15px);
+      @include media-breakpoint-down(md) {
+        padding: 0;
+      }
 
       li {
         display: inline-block;
@@ -92,10 +102,22 @@
       }
 
       li.pagination-dot-li {
-        display: none;
-      }
-      li.show-dot {
         display: inline-block;
+        @include media-breakpoint-between(sm, md) {
+          &:not(:nth-child(-n + 4)) {
+            display: none;
+          }
+        }
+        @include media-breakpoint-only(lg) {
+          &:not(:nth-child(-n + 3)) {
+            display: none;
+          }
+        }
+        @include media-breakpoint-only(xl) {
+          &:not(:nth-child(-n + 2)) {
+            display: none;
+          }
+        }
       }
       li.active a {
         background-color: $primary;
